force-app/main/default/objects/ACME_Scoring_Criteria__mdt/ACME_Scoring_Criteria__mdt.object-meta.xml
<CustomObject>
    <label>Scoring Criteria</label>
    <pluralLabel>Scoring Criteria</pluralLabel>
</CustomObject>