force-app/main/default/objects/ACME_Scoring_Criteria__mdt/fields/Criteria_Type__c.field-meta.xml
<CustomField>
    <fullName>Criteria_Type__c</fullName>
    <label>Criteria Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DEMOGRAPHIC</fullName>
            </value>
            <value>
                <fullName>ENGAGEMENT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>