force-app/main/default/objects/ACME_Scoring_Criteria__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <label>Is Active</label>
    <type>Checkbox</type>
    <description>Indicates if this scoring criteria is currently active</description>
</CustomField>