force-app/main/default/objects/ACME_Scoring_Criteria__mdt/fields/Maximum_Value__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Value__c</fullName>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>