force-app/main/default/objects/ACME_Scoring_Criteria__mdt/fields/Score_Points__c.field-meta.xml
<CustomField>
    <fullName>Score_Points__c</fullName>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>