force-app/main/default/objects/ACME_Scoring_Criteria__mdt/fields/Score_Weight__c.field-meta.xml
<CustomField>
    <fullName>Score_Weight__c</fullName>
    <label>Score Weight</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
    <description>Weight of this scoring criteria</description>
</CustomField>